[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/autogun/assets/turretBase_big.png" type="Texture" id=1]
[ext_resource path="res://weapons/autogun/AutoGun.gd" type="Script" id=2]
[ext_resource path="res://weapons/autogun/assets/gun06.png" type="Texture" id=3]
[ext_resource path="res://weapons/autogun/AutoGunControl.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[node name="AutoGun" type="Node2D"]
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Gun" type="Sprite" parent="Pivot"]
texture = ExtResource( 3 )
offset = Vector2( 15, 0 )

[node name="Muzzle" type="Position2D" parent="Pivot"]
position = Vector2( 40, 0 )

[node name="FireRate" type="Timer" parent="Pivot"]
one_shot = true

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 1 )
[connection signal="timeout" from="Pivot/FireRate" to="Pivot" method="_on_FireRate_timeout"]
[connection signal="body_entered" from="AttackRange" to="Pivot" method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="Pivot" method="_on_AttackRange_body_exited"]
